--- a/奇淫巧技/溢出文本隐藏.md
+++ b/奇淫巧技/溢出文本隐藏.md
@@ -5,3 +5,39 @@
     white-space: nowrap;
 
 **Tips:这些属性只能作用于文本元素上，而不能书写与文本元素的父级**
+
+## 多行文本溢出
+
+> Chrome 真正的多行文本溢出隐藏，兼容性差，只有Chrome支持
+
+	.title {
+	  display: -webkit-box;
+	  width: 300px;
+	  overflow: hidden;
+	  text-overflow: ellipsis;
+	  display: -webkit-box;
+	  -webkit-line-clamp: 3;
+	  -webkit-box-orient: vertical;
+	  flex-direction: column;
+	}
+
+> 兼容方案，支持到IE8，after在ie8下只能使用p:after，而不能使用p::after，注意
+	
+	p {
+	  position: relative;
+	  line-height: 20px;
+	  max-height: 40px;
+	  overflow: hidden;
+	}
+	
+	p:after {
+	  content: "...";
+	  position: absolute;
+	  bottom: 0;
+	  right: 0;
+	  padding-left: 40px;
+	  background: -webkit-linear-gradient(left, transparent, #fff 55%);
+	  background: -o-linear-gradient(right, transparent, #fff 55%);
+	  background: -moz-linear-gradient(right, transparent, #fff 55%);
+	  background: linear-gradient(to right, transparent, #fff 55%);
+	}
