--- a/开发软件列表.md
+++ b/开发软件列表.md
@@ -19,8 +19,9 @@
 - PHP+Mysql：PhpStudy、lnmp
 - Java：jdk1.8
 - web容器：Nginx
-- git终端：GitBash
+- 终端：GitBash、Cmder
 - node运行环境：nvm[node版本控制管理]
+- 依赖源管理：nrm
 
 ## 代理
 
