--- a/Java/Maven/1.Maven[安装].md
+++ b/Java/Maven/1.Maven[安装].md
@@ -17,5 +17,11 @@
 
 > brew 查看安装的应用信息：`brew info maven` 包含安装路径
 
+## 依赖
+
+项目依赖在项目pom.xml中配置相关依赖即可
+
+中央仓库：[https://mvnrepository.com/](https://mvnrepository.com/ "mvnrepository.com")
+
 
 
