--- a/Java/Maven/2.Maven[镜像&仓库].md
+++ b/Java/Maven/2.Maven[镜像&仓库].md
@@ -14,10 +14,28 @@
 
 搜索mirror即可定位到镜像配置位置，添加如下配置：
 
-    <id>nexus-aliyun</id>
-    <mirrorOf>*</mirrorOf>
-    <name>Nexus aliyun</name>
-    <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+    <mirror>
+		<id>nexus-aliyun</id>
+		<mirrorOf>*</mirrorOf>
+		<name>Nexus aliyun</name>
+		<url>http://maven.aliyun.com/nexus/content/groups/public</url>
+	</mirror>
+
+**敲黑板：**配置了mirros之后可能并没有什么卵用，maven还是会优先去中央仓库拉取jar包，此时需要在项目pom.xml => project 下添加如下配置
+
+	<repositories>
+	    <repository>
+	        <id>nexus-aliyun</id>
+	        <name>nexus-aliyun</name>
+	        <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+	        <releases>
+	            <enabled>true</enabled>
+	        </releases>
+	        <snapshots>
+	            <enabled>false</enabled>
+	        </snapshots>
+	    </repository>
+	</repositories>
 
 
 ## 配置本地仓库存放位置
