--- a/Java/Maven/2.Maven[镜像&仓库].md
+++ b/Java/Maven/2.Maven[镜像&仓库].md
@@ -21,7 +21,9 @@
 		<url>http://maven.aliyun.com/nexus/content/groups/public</url>
 	</mirror>
 
-**敲黑板：**配置了mirros之后可能并没有什么卵用，maven还是会优先去中央仓库拉取jar包，此时需要在项目pom.xml => project 下添加如下配置
+**敲黑板：**配置好了maven之后，idea中的maven选项一定要切换到本地的maven，默认会使用idea自带的maven进行拉取，异常的慢
+
+**敲黑板：**项目级镜像配置，在项目pom.xml => project 下添加如下配置
 
 	<repositories>
 	    <repository>
