--- a/Java/MyBatis/4.Mybatis[配置约束].md
+++ b/Java/MyBatis/4.Mybatis[配置约束].md
@@ -6,3 +6,9 @@
 	<mapper>
 
 	</mapper>
+
+## 配置基础约束
+
+	<?xml version="1.0" encoding="UTF-8"?>
+	<!DOCTYPE configuration PUBLIC "-//mybatis.org//DTD Config 3.0//EN"
+		"http://mybatis.org/dtd/mybatis-3-config.dtd">
