--- a/日本語/1.初级-上/5.第五课[动词对象を&频率副词].md
+++ b/日本語/1.初级-上/5.第五课[动词对象を&频率副词].md
@@ -8,7 +8,7 @@
 
 ## 动词对象助词 を
 
-  パン　と　卵　を「表动作对象」　食べます
+パン　と　卵　を「表动作对象」　食べます
 
 ## 频率副词
 
@@ -38,3 +38,8 @@ tips: 然后 それから,可以用于连接从句
 
     昨日は　ゆっくり「充分、好好地：表示充分地，修饰动词休息」　休みましだ
 
+- ゆっくり：好好地
+
+栗子：
+
+    では、ごゆっくり。　　「那么，请慢用、请慢走」
