--- a/开发软件列表.md
+++ b/开发软件列表.md
@@ -1,18 +1,24 @@
 ## 开发机器软件列表
 
-- 图片与颜色：Photoshop、ColorSchemer Studio[调色|取色]、PxCook[切图神器]
-- 原型设计：Axure RP 8、PowerDesign、Xmind[脑图]
+- 图片与颜色：Photoshop、ColorSchemer Studio[调色|取色]、PxCook[切图]
+- 原型设计：Axure RP 8、PowerDesign、Xmind[脑图]、MindMaster
 - 浏览器：IE、Chrom、Safari、360安全浏览器、360极速浏览器、Opera浏览器、火狐浏览器
 - 翻译：有道
 - 虚拟机：Vm
-- 笔记：MarkdownPad2、有道云笔记
-- 远程控制：TeamViewer、Xshell
+- 笔记：MarkdownPad2、有道云笔记、DesktopNote
+- 远程控制：TeamViewer、Xshell、MobaXterm、SecureCRT
+- FTP：FileZilla、FlashFXP
 - 数据库IDE:Navicat Premium 12、SQLyog
 - 版本控制：TortoiseSVN、SourceTree[Git]
 - 编辑器：VsCode、WebStorm、SublimeText
 - 接口调试：PostMan
 - css预处理：Koala
+- 数据抓包：Fiddler、Wireshark
 - 命令管理：Command Pad
+- 压测：ApacheJMeter
+- 文件管理器：Clover
+- 录制：LICEcap、Bandicam
+- 远程唤醒：WakeOnLanGui
 
 ## 开发环境
 
