--- a/容器技术/Docker/2.Docker[镜像制作].md
+++ b/容器技术/Docker/2.Docker[镜像制作].md
@@ -4,18 +4,51 @@
 
 第一步：提交当前正在运行的镜像
 
-	docker commit aaa my-nginx:1.0
+    docker commit -m '提交说明' aaa my-nginx:1.0
 
 说明：
 
-	docker commit 容器实例ID <镜像名称>:<镜像版本>
+    docker commit -m '提交说明' 容器实例ID <镜像名称>:<镜像版本>
 
 第二步：将镜像存储成文件
 
-	docker save -o my-nginx.img my-nginx:1.0
+    docker save -o my-nginx.img my-nginx:1.0
 
 说明：
 
-	docker save -o <文件名> <镜像名>:<镜像版本>
+    docker save -o <文件名> <镜像名>:<镜像版本>
 
-### 使用Dockerfile创建镜像
+### 使用 Dockerfile 创建镜像
+
+创建文件：Dockerfile
+
+```dockerfile
+# 基础依赖乌班图的镜像
+FROM ubuntu
+# 作者
+MAINTAINER julyWind
+# 执行命令更新
+RUN apt-get update
+RUN apt-get install nginx -y
+# 入口执行的命令，数组最终采用空格进行连接，生成一条命令：/usr/sbin/nginx -g deamon off;
+ENTRYPOINT ["/usr/sbin/nginx","-g","daemon off;"]
+# 暴露80端口
+EXPOSE 80
+```
+
+执行命令：`docker build -t my-nginx-ubuntu .`，等待命令执行完成，即创建了一个基于乌班图的 nginx 运行容器
+
+常用Dockerfile原操作命令：
+
+- FROM 指定基础镜像
+- RUN 运行命令
+- ADD 添加文件，支持远程文件
+- COPY 复制文件
+- CMD 执行命令
+- EXPOSE 暴露端口
+- WORKDIR 设定工作目录
+- MAINTAINER 维护者
+- ENV 设定环境变量
+- ENTRYPOINT 容器入口指令
+- USER 指定运行的用户
+- VOLUME 挂载点
