--- a/小目标.md
+++ b/小目标.md
@@ -1,10 +1,13 @@
 # 无聊时的小目标
 
-## Bukkit插件开发
+## 充电
 
-- 服务端优化插件
-- 自定义合成表插件
-- AE2在服务端插件的实现
+- nodejs
+- webpack
+- Electron
+- npm模块开发
+- node-cli指令开发学习
+
 
 ## 吉他
 
@@ -13,19 +16,9 @@
 
 ## 软路由
 
-- 收集软路由相关信息
-- 收集使用人员
+- [x]配置实现软路由相关功能
 
 ## 视频剪辑
 
 - Fcpx学习
-- Imovie学习
 
-
-## 充电
-
-- nodejs
-- webpack
-- Electron
-- npm模块开发
-- Mysql进阶
