--- a/小目标.md
+++ b/小目标.md
@@ -1,24 +1,22 @@
-# 无聊时的小目标
+# Todo List
 
 ## 充电
 
-- nodejs
-- webpack
-- Electron
-- npm模块开发
-- node-cli指令开发学习
-
+- [ ] nodejs
+- [ ] webpack
+- [ ] Electron
+- [ ] npm 模块开发
+- [ ] node-cli 指令开发学习
 
 ## 吉他
 
-- 吉他自学
-- 基础乐理
+- [ ] 吉他自学
+- [ ] 基础乐理
 
 ## 软路由
 
-- [x]配置实现软路由相关功能
+- [x] 配置实现软路由相关功能
 
 ## 视频剪辑
 
-- Fcpx学习
-
+- [ ] Fcpx 学习
