--- a/容器技术/Docker/1.Docker[安装].md
+++ b/容器技术/Docker/1.Docker[安装].md
@@ -26,6 +26,10 @@ Centos 下安装：
 - 启动 docker 容器：`docker run -itd -p 80:80 --name nginx`
 - 进入容器：`docker exec -it aaaa /bin/bash`
 - 带有初始化脚本的 exec：`docker exec -it 09dd /bin/bash --init-file /.bashrc`
+- 提交容器：`docker commit afcaf46e8305 my-images`
+- 导出容器：`docker export -o my-images.tar my-images`
+- 导入容器：`docker import my-images.tar july/my-images`
+- 重启 Docker 服务：`systemctl restart docker`
 
 解释：
 
@@ -34,3 +38,5 @@ Centos 下安装：
 ## 获取远程镜像
 
     docker pull
+
+**Tips：容器是以任务为核心启动的，如果任务结束，则容器也会退出，所以容器的入口点执行的程序必须是一个前台程序**
