--- a/容器技术/Docker/1.Docker[安装].md
+++ b/容器技术/Docker/1.Docker[安装].md
@@ -27,8 +27,10 @@ Centos 下安装：
 - 进入容器：`docker exec -it aaaa /bin/bash`
 - 带有初始化脚本的 exec：`docker exec -it 09dd /bin/bash --init-file /.bashrc`
 - 提交容器：`docker commit afcaf46e8305 my-images`
-- 导出容器：`docker export -o my-images.tar my-images`
-- 导入容器：`docker import my-images.tar july/my-images`
+- 导出容器：`docker export a123456 > my-images.tar`
+- 导入容器：`docker import - new_hangger_server < hangger_server.tar`
+- 导出镜像：`docker save -o dockerdemo.tar dockerdemo`
+- 导入镜像：`docker load -i dockerdemo.tar`
 - 重启 Docker 服务：`systemctl restart docker`
 
 解释：
