第二章-数据类型
变量声明与数据类型

--- a/前端方向/前端基础/JavaScript高级程序设计笔记/3.第三章-语言基础/1.JS[变量声明].md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/3.第三章-语言基础/1.JS[变量声明].md
@@ -12,9 +12,9 @@ function test() {
 }
 ```
 
-此时 testVal 成为全局变量，而 val 则为局部变量
+此时 testVal 成为全局变量，而 val 则为局部变量；**Important：在 ES6 前，没有块及作用域的概念！**
 
-**Tips：在 ES6 前，没有块及作用域的概念！**
+_Tips：var 在顶级作用域声明的变量会挂载对 window 对象上，如果是浏览器环境的话_
 
 ### 声明提升与暂时性锁区
 
@@ -39,7 +39,7 @@ var val1 = "val1";
 
 解释：在作用域内，如果存在某个变量的 let、const 声明，那么在该声明语句之前，该变量均不可访问（包括 typeof）
 
-ES6 之后，由于出现了 const、let 定义变量的方法，js 新增了一种作用域类型：块级作用域；const、let 的声明范围属于块级作用域（if、switch、for 等流程控制语句）；**let、const 不存在声明提升，不允许重复定义**
+ES6 之后，由于出现了 const、let 定义变量的方法，js 新增了一种作用域类型：块级作用域；const、let 的声明范围属于块级作用域（if、switch、for 等流程控制语句）；**let、const 不存在声明提升，不允许重复定义（包括使用了 var 声明的也不可以）**
 
 几个刁钻的死区陷阱：
 
@@ -53,3 +53,9 @@ function test(a = b, b = 1) {}
 // Ok
 function test(a = 1, b = a) {}
 ```
+
+### var、let、const 异同
+
+1. 在全局作用域下 var 声明变量会挂载到 window 对象下，而 let、const 则不会
+2. let、const 声明的变/常量在所有的 for 下，每一轮循环都是一个独立的实例，而 var 则在整个循环过程中共享同一个实例
+3. const 声明变量的变量引用不可更改，且必须具备初始值
