--- a/前端方向/前端基础/JavaScript高级程序设计笔记/3.第三章-语言基础/2.JS[数据类型].md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/3.第三章-语言基础/2.JS[数据类型].md
@@ -31,3 +31,95 @@ _Tips：undefined 为假值_
 Null 类型同样只有一个值，即特殊值 null。逻辑上讲， null 值表示一个空对象指针，这也是给 typeof 传一个 null 会返回"object"的原。
 
 在定义将来要保存对象值的变量时，建议使用 null 来初始化，不要使用其他值。这样就可以保持 null 是空对象指针的语义，并进一步将其与 undefined 区分开来。
+
+## NaN
+
+有一个特殊的数值叫 NaN，意思是“不是数值”(Not a Number)，理解为不是一个有效的数值即可
+
+_Tips：+NaN 的结果为 NaN，NaN 不等于包括 NaN 在哪的任意值，如果要判断值是不是 NaN，请使用原生函数：isNaN_
+
+## 关于 Number 的转型
+
+讲一个值转为数值类型时的转换规则如下：
+
+- 布尔值，true 转换为 1，false 转换为 0。  数值，直接返回。
+- null，返回 0。
+- undefined，返回 NaN。
+- 字符串，应用以下规则。
+
+  - 如果字符串包含数值字符，包括数值字符前面带加、减号的情况，则转换为一个十进制数值。 因此，Number("1")返回 1，Number("123")返回 123，Number("011")返回 11(忽略前面 的零)。
+  - 如果字符串包含有效的浮点值格式如"1.1"，则会转换为相应的浮点值(同样，忽略前面的零)。
+  - 如果字符串包含有效的十六进制格式如"0xf"，则会转换为与该十六进制值对应的十进制整数值
+  - 如果是空字符串(不包含字符)，则返回 0。该十六进制值对应的十进制整数值。
+  - 如果字符串包含除上述情况之外的其他字符，则返回 NaN。
+
+- 对象，**调用 valueOf()方法，并按照上述规则转换返回的值。如果转换结果是 NaN，则调用 toString()方法，再按照转换字符串的规则转换**。
+
+_Tips：Number 构造函数与一元操作符`+`转型规则一致，但是 parseInt 的转换逻辑则则稍有区别，空字符串 Number 会返回 0，而 parseInt 会返回 NaN_
+
+## String
+
+ECMAScript 中字符串为常量，不可变。除 null 与 undefeated 外，所有类型都具备 toString 转型函数，需要使用包装类，大都不可以直接在字面量上调用，需要赋值给某个变量，ECMAScript 会自动装箱，此时 toString 即可用
+
+_Tips：对数值调用 toString 时可以传入底数，将其转换为指定进制，底数范围：2-36 （测试环境 Node.js 14.15.4）_
+
+> 字符串模板插值
+
+模板插值的求值方式为立即求值而非延迟求值，会从插值最近的作用域取得实际值
+
+> 原始值
+
+可以用 String.raw 来获取转义前的原始字符串，对于非转义书写的转义字符无效，比如直接敲一个换行符，使用这种方法，并不会帮你还原成`\n`。
+
+```javascript
+console.log(`\u00A9`); // ©
+console.log(String.raw`\u00A9`); // \u00A9
+```
+
+> 模板字面量标签函数
+
+一个可以自定义字符串模板插值行为的普通函数，用的比较山，例子：
+
+```javascript
+let a = 6;
+let b = 9;
+
+function simpleTag(strings, aValExpression, bValExpression, sumExpression) {
+  console.log(strings);
+  console.log(aValExpression);
+  console.log(bValExpression);
+  console.log(sumExpression);
+  return "foobar";
+}
+let untaggedResult = `${a} + ${b} = ${a + b}`;
+let taggedResult = simpleTag`${a} + ${b} = ${a + b}`;
+// ["", " + ", " = ", ""]
+// 6
+// 9
+// 15
+console.log(untaggedResult);
+console.log(taggedResult);
+// "6 + 9 = 15"
+// "foobar"
+```
+
+```javascript
+let a = 6;
+let b = 9;
+function zipTag(strings, ...expressions) {
+  return (
+    strings[0] + expressions.map((e, i) => `${e}${strings[i + 1]}`).join("")
+  );
+}
+letuntaggedResult = `${a}+${b}=${a + b}`;
+let taggedResult = zipTag`${a} + ${b} = ${a + b}`;
+console.log(untaggedResult); // "6 + 9 = 15"
+console.log(taggedResult); // "6 + 9 = 15"
+```
+
+
+## Symbol
+
+- 不能使用构造函数，也就是new创建，只能使用工程模式创建符号变量
+- Symbol.for可以注册全局符号，方便重用
+- 可以使用 Symbol.keyFor()来查询全局注册表
