--- a/小目标.md
+++ b/小目标.md
@@ -2,11 +2,11 @@
 
 ## 充电
 
-- [ ] nodejs
+- [x] nodejs
 - [ ] webpack
 - [ ] Electron
-- [ ] npm 模块开发
-- [ ] node-cli 指令开发学习
+- [x] npm 模块开发
+- [x] node-cli 指令开发学习
 
 ## 吉他
 
