--- a/前端方向/前端基础/JavaScript高级程序设计笔记/6.第六章-集合引用类型/拓展阅读.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/6.第六章-集合引用类型/拓展阅读.md
@@ -1,3 +1,12 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [字节序](#字节序)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 字节序
 
 字节序分大端、小端，通常来说 PowerPC 系列的处理器使用大端字节序，也就是人们所理解的正常顺序：0x12345678，在内存中，低地址->高地址，顺序存放，但是在 X86，X86_64 体系的处理器中使用小端字节序：0x78 0x56 0x34 0x12 这样的顺序进行存储（处理速度更快）
