--- a/小目标.md
+++ b/小目标.md
@@ -3,10 +3,10 @@
 **Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
 - [Todo List](#todo-list)
-  - [充电](#%E5%85%85%E7%94%B5)
-  - [吉他](#%E5%90%89%E4%BB%96)
-  - [软路由](#%E8%BD%AF%E8%B7%AF%E7%94%B1)
-  - [视频剪辑](#%E8%A7%86%E9%A2%91%E5%89%AA%E8%BE%91)
+  - [充电](#充电)
+  - [吉他](#吉他)
+  - [软路由](#软路由)
+  - [视频剪辑](#视频剪辑)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -19,6 +19,7 @@
 - [ ] Electron
 - [x] npm 模块开发
 - [x] node-cli 指令开发学习
+- [ ] 《JavaScript高级程序设计》研读
 
 ## 吉他
 
