第七章笔记同步

--- a/前端方向/前端基础/JavaScript高级程序设计笔记/7.第七章-迭代器-生成器/1.迭代器.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/7.第七章-迭代器-生成器/1.迭代器.md
@@ -4,8 +4,10 @@
 **Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [ECMAScript 中实现迭代器](#ecmascript-中实现迭代器)
+- [可使用的范围](#可使用的范围)
 - [自定义迭代器](#自定义迭代器)
 - [提前终止迭代](#提前终止迭代)
+- [垃圾回收](#垃圾回收)
 - [疑问](#疑问)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
@@ -17,6 +19,18 @@
 **Tips：迭代器维护着一个指向可迭代对象的引用，因此迭代器会阻止垃圾回收程序回收可迭代对象。**
 
 **Tips:迭代器并不与可迭代对象某个时刻的快照绑定，而仅仅是使用游标来记录遍历可迭代对象的历程。如果可迭代对象在迭代期间被修改了，那么迭代器也会反映相应的变化**
+
+## 可使用的范围
+
+- for-of 循环
+- 数组解构
+- 扩展操作符
+- Array.from()
+- 创建集合
+- 创建映射
+- Promise.all()接收由期约组成的可迭代对象
+- Promise.race()接收由期约组成的可迭代对象
+- yield\*操作符，在生成器中使用
 
 ## 自定义迭代器
 
@@ -102,6 +116,10 @@ for (let i of counter1) {
 
 如果迭代器没有关闭，则还可以继续从上次离开的地方继续迭代。比如，数组的迭代器就是不能关闭的；因为 return()方法是可选的，所以并非所有迭代器都是可关闭的。要知道某个迭代器是否可关闭，可以测试这个迭代器实例的 return 属性是不是函数对象。不过，仅仅给一个不可关闭的迭代器增加这个方法并不能让它变成可关闭的。这是因为调用 return()不会强制迭代器进入关闭状态。即便如此，return()方法还是会被调用。
 
+## 垃圾回收
+
+**Tips:迭代器维护着一个指向可迭代对象的引用，因此迭代器会阻止垃圾回收程序回收可迭代对象。**
+
 ## 疑问
 
-不知道为什么，自定义迭代器实现的工厂方法产生的迭代器实例不能用于 for-of，而 JS 数组本身的迭代器却可以
+不知道为什么，自定义迭代器实现的工厂方法产生的迭代器实例不能用于 for-of，而 JS 数组本身的迭代器却可以（解释：数组类实现了 Iterable 接口，并返回了一个自引用，具体如何做到多次调用，状态隔离，暂不明确）
