--- a/前端方向/前端基础/JavaScript高级程序设计笔记/5.第五章-基本引用类型/1.包装类.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/5.第五章-基本引用类型/1.包装类.md
@@ -1,14 +1,16 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
-- [ECMAScript 中的包装类](#ecmascript-%E4%B8%AD%E7%9A%84%E5%8C%85%E8%A3%85%E7%B1%BB)
-- [Boolean 包装类](#boolean-%E5%8C%85%E8%A3%85%E7%B1%BB)
-- [Number 包装类](#number-%E5%8C%85%E8%A3%85%E7%B1%BB)
-- [String 包装类](#string-%E5%8C%85%E8%A3%85%E7%B1%BB)
-  - [对于单个字符的取值与解释](#%E5%AF%B9%E4%BA%8E%E5%8D%95%E4%B8%AA%E5%AD%97%E7%AC%A6%E7%9A%84%E5%8F%96%E5%80%BC%E4%B8%8E%E8%A7%A3%E9%87%8A)
-  - [编码方式（神学、玄学、哲学）](#%E7%BC%96%E7%A0%81%E6%96%B9%E5%BC%8F%E7%A5%9E%E5%AD%A6%E7%8E%84%E5%AD%A6%E5%93%B2%E5%AD%A6)
-- [Object 工厂方法](#object-%E5%B7%A5%E5%8E%82%E6%96%B9%E6%B3%95)
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [ECMAScript 中的包装类](#ecmascript-中的包装类)
+- [Boolean 包装类](#boolean-包装类)
+- [Number 包装类](#number-包装类)
+- [String 包装类](#string-包装类)
+  - [对于单个字符的取值与解释](#对于单个字符的取值与解释)
+  - [编码方式（神学、玄学、哲学）](#编码方式神学玄学哲学)
+  - [UTF-8/16 编码](#utf-816-编码)
+- [Object 工厂方法](#object-工厂方法)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -110,6 +112,22 @@ b.normalize("NFD") === c.normalize("NFD"); // true
 上述 a,b,c 表示的字符其实是同一个字符，但是由于 Unicode 编码格式不同（BMP 表示或者代理对表示），导致底层数据不通，这在进行比较时是致命的；某些 Unicode 字符可以有多种编码方式。有的字符既可以通过一个 BMP 字符表示，也可以通过一个代理对表示，就像上面一样
 
 为解决这个问题， Unicode 提供了 4 种规范化形式，可以将类似上面的字符规范化为一致的格式，无论底层字符的代码是什么。这 4 种规范化形式是： NFD（ Normalization Form D）、 NFC（ Normalization Form C）、NFKD（ Normalization Form KD）和 NFKC（ Normalization Form KC）。可以使用 normalize()方法对字符串应用上述规范化形式，使用时需要传入表示哪种形式的字符串： "NFD"、 "NFC"、 "NFKD"或"NFKC"。
+
+### UTF-8/16 编码
+
+utf-8 编码形式：
+
+- 字符代码在 000000 - 00007F 之间的，用一个字节编码；
+- 000080 - 0007FF 之间的字符用两个字节；
+- 000800 - 00D7FF 和 00E000 - 00FFFF 之间的用三个字节，注: Unicode 在范围 D800-DFFF 中不存在任何字符；
+- 010000 - 10FFFF 之间的用 4 个字节。
+
+utf-16 编码形式：
+
+- 000000 - 00FFFF 两个字节；
+- 010000 - 10FFFF 四个字节。
+
+_Tips：UTF-8/16 都属于 Unicode 编码的实现形式_
 
 ## Object 工厂方法
 
