--- a/前端方向/前端基础/JavaScript高级程序设计笔记/8.第八章-对象、类、面向对象编程/2.创建对象.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/8.第八章-对象、类、面向对象编程/2.创建对象.md
@@ -5,7 +5,7 @@
   - [工厂模式](#%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F)
   - [构造函数模式](#%E6%9E%84%E9%80%A0%E5%87%BD%E6%95%B0%E6%A8%A1%E5%BC%8F)
   - [原型模式](#%E5%8E%9F%E5%9E%8B%E6%A8%A1%E5%BC%8F)
-  - [对象冒充](#%E5%AF%B9%E8%B1%A1%E5%86%92%E5%85%85)
+  - [原型对象指定](#%E5%8E%9F%E5%9E%8B%E5%AF%B9%E8%B1%A1%E6%8C%87%E5%AE%9A)
 - [属性的层级搜索](#%E5%B1%9E%E6%80%A7%E7%9A%84%E5%B1%82%E7%BA%A7%E6%90%9C%E7%B4%A2)
   - [确定是否含有属性](#%E7%A1%AE%E5%AE%9A%E6%98%AF%E5%90%A6%E5%90%AB%E6%9C%89%E5%B1%9E%E6%80%A7)
   - [与 in 和 for-in](#%E4%B8%8E-in-%E5%92%8C-for-in)
@@ -62,7 +62,7 @@ Person.prototype.sayName = function () {
 
 <img class="img-exam" src="../asset/原型演示.png">
 
-### 对象冒充
+### 原型对象指定
 
 直接为构造函数指定原型对象：
 
