第十一章-期约
期约部分完毕

--- a/前端方向/前端基础/JavaScript高级程序设计笔记/0.其他重点/1.任务机制(宏任务-微任务).md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/0.其他重点/1.任务机制(宏任务-微任务).md
@@ -5,4 +5,65 @@
 
 _Tips:requestAnimationFrame 在 MDN 的定义为，下次页面重绘前所执行的操作，而重绘也是作为宏任务的一个步骤来存在的，且该步骤晚于微任务的执行_
 
-待续：https://juejin.cn/post/6844903657264136200
+特点：
+
+- 在当前的微任务没有执行完成时，是不会执行下一个宏任务的。
+- 当前宏任务所添加的所有微任务会进入微任务队列，当前宏任务结束后会处理微任务队列中的所有任务，处理完成后才会继续开始下一个宏任务
+
+_Tips：setTimeout 最快的处理时间为 1ms，如果 Timer 嵌套层级大于 5 则处理时间最快为 4ms（标准），Chrome 实现为大于等于 5，延迟你设置为 0，其实与设置为 1 没什么区别，参见文章：https://juejin.cn/post/6846687590616137742_
+
+## 关于 Click 事件
+
+一次用户 Click 事件可以理解为一个 IO 事件，每个事件回掉都是独立的宏任务，也会对应创建微任务队列，但是如果 click 事件为 JavaScript 代码触发，而不是用户实际点击，那么情况就有所不同了：事件仍然会冒泡，但是此时的后续事件不会创建新的宏任务，而是以同步的方式进行，添加的微任务与宏任务继续按照之前的情况继续添加
+
+```html
+<style>
+  #outer {
+    padding: 20px;
+    background: #616161;
+  }
+
+  #inner {
+    width: 100px;
+    height: 100px;
+    background: #757575;
+  }
+</style>
+<div id="outer">
+  <div id="inner"></div>
+</div>
+```
+
+```js
+const $inner = document.querySelector("#inner");
+const $outer = document.querySelector("#outer");
+
+function handler() {
+  console.log("click"); // 直接输出
+
+  Promise.resolve().then((_) => console.log("promise")); // 注册微任务
+
+  setTimeout((_) => console.log("timeout")); // 注册宏任务
+
+  requestAnimationFrame((_) => console.log("animationFrame")); // 注册宏任务
+
+  $outer.setAttribute("data-random", Math.random()); // DOM属性修改，触发微任务
+}
+
+new MutationObserver((_) => {
+  console.log("observer");
+}).observe($outer, {
+  attributes: true,
+});
+
+$inner.addEventListener("click", handler);
+$outer.addEventListener("click", handler);
+```
+
+用户点击#inner：click -> promise -> observer -> click -> promise -> observer -> animationFrame -> animationFrame -> timeout -> timeout
+
+代码触发：click -> click -> promise -> observer -> promise -> animationFrame -> animationFrame -> timeout -> timeout
+
+**Tips：MutationObserver 在代码触发的同步执行情况下的监听不会说同时触发多次**
+
+详细说明与演示：https://jakearchibald.com/2015/tasks-microtasks-queues-and-schedules/#level-1-bossfight
