第十二章-BOM-Window对象
1、第十二章-BOM-Window对象
2、目录顺序调整

--- a/前端方向/前端基础/JavaScript高级程序设计笔记/8.第八章-对象、类、面向对象编程/2.创建对象.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/8.第八章-对象、类、面向对象编程/2.创建对象.md
@@ -14,7 +14,7 @@
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
-<link rel="stylesheet" href="./asset/common.css">
+<link rel="stylesheet" href="./zz_asset/common.css">
 
 ## 创建对象
 
@@ -60,7 +60,7 @@ Person.prototype.sayName = function () {
 
 下面是对构造函数、原型对象、对象实例之间联系的一个图：
 
-<img class="img-exam" src="../asset/原型演示.png">
+<img class="img-exam" src="../zz_asset/原型演示.png">
 
 ### 原型对象指定
 
