--- a/前端方向/前端基础/JavaScript高级程序设计笔记/8.第八章-对象、类、面向对象编程/3.继承.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/8.第八章-对象、类、面向对象编程/3.继承.md
@@ -45,7 +45,7 @@ console.log(instance.getSuperValue()); // true
 
 上述例子形成的完整原型链：
 
-<img src="../asset/原型链.png">
+<img src="../zz_asset/原型链.png">
 
 ### 判断实例是否是某个类型
 
