--- a/前端方向/前端基础/JavaScript高级程序设计笔记/A.第十章-函数/1.函数基础.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/A.第十章-函数/1.函数基础.md
@@ -188,7 +188,7 @@ _Tips：对于像求取斐波纳切数值之类的递归调用，尾调用优化
 
 内层函数引用外层函数作用域中变量的行为被称作闭包引用，这种引用，在外层函数返回值为内部函数时，外层函数返回后，外层函数的执行上下文环境并不会销毁，必须等到被返回的函数所创建的执行上下文释放后才能销毁，如果该函数继续创建闭包，则遵循该原则继续套娃。
 
-<img src="../asset/作用域链.png"/>
+<img src="../zz_asset/作用域链.png"/>
 
 ## 关于 this
 
