--- a/前端方向/前端基础/JavaScript高级程序设计笔记/0.其他重点/1.任务机制(宏任务-微任务).md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/0.其他重点/1.任务机制(宏任务-微任务).md
@@ -1,7 +1,7 @@
 ## 常见的宏任务与微任务
 
-<img src="../asset/task-a.png"/>
-<img src="../asset/task-b.png"/>
+<img src="../zz_asset/task-a.png"/>
+<img src="../zz_asset/task-b.png"/>
 
 _Tips:requestAnimationFrame 在 MDN 的定义为，下次页面重绘前所执行的操作，而重绘也是作为宏任务的一个步骤来存在的，且该步骤晚于微任务的执行_
 
