小目标更新

--- a/小目标.md
+++ b/小目标.md
@@ -1,35 +1,57 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [Todo List](#todo-list)
-  - [充电](#充电)
-  - [吉他](#吉他)
-  - [软路由](#软路由)
-  - [视频剪辑](#视频剪辑)
+  - [工作充电](#工作充电)
+  - [音乐](#音乐)
+  - [阅读](#阅读)
+  - [瞎折腾](#瞎折腾)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
 # Todo List
 
-## 充电
+## 工作充电
 
 - [x] nodejs
-- [ ] webpack
-- [ ] Electron
 - [x] npm 模块开发
 - [x] node-cli 指令开发学习
-- [ ] 《JavaScript高级程序设计》研读
+- [ ] webpack5
+- [ ] Electron
+- [ ] 《JavaScript 高级程序设计》研读（2021 年内完成）
 
-## 吉他
+## 音乐
 
-- [ ] 吉他自学
 - [ ] 基础乐理
+- [ ] 吉他和弦推理
 
-## 软路由
+## 阅读
+
+- [x] 人性的弱点
+- [x] 人格心理学
+- [x] 亲密关系
+- [x] 乌合之众
+- [x] 人间失格
+- [x] 边城
+- [x] 三体
+- [x] 皮囊
+- [x] 杀死一只知更鸟
+- [x] 枪炮病菌与钢铁
+- [x] 飘-上(2021 年)
+- [ ] 飘-下(2021 年内完成)
+- [ ] 原生家庭
+- [ ] 性格拼图
+- [ ] 你当像鸟飞往你的山
+- [ ] 社会心理学
+- [ ] 墨菲定律
+- [ ] 梦的解析
+- [ ] 自卑与超越
+
+## 瞎折腾
 
 - [x] 配置实现软路由相关功能
-
-## 视频剪辑
-
+- [x] NAS 服务搭建
 - [ ] Fcpx 学习
+- [ ] Pr 学习
