第十二章-BOM对象

--- a/前端方向/前端基础/JavaScript高级程序设计笔记/C.第十二章-BOM/2.location对象.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/C.第十二章-BOM/2.location对象.md
@@ -1,3 +1,16 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [简述](#%E7%AE%80%E8%BF%B0)
+- [常用属性](#%E5%B8%B8%E7%94%A8%E5%B1%9E%E6%80%A7)
+- [Search 字符串解析](#search-%E5%AD%97%E7%AC%A6%E4%B8%B2%E8%A7%A3%E6%9E%90)
+- [修改导航](#%E4%BF%AE%E6%94%B9%E5%AF%BC%E8%88%AA)
+  - [会新增历史记录](#%E4%BC%9A%E6%96%B0%E5%A2%9E%E5%8E%86%E5%8F%B2%E8%AE%B0%E5%BD%95)
+  - [不会新增历史记录](#%E4%B8%8D%E4%BC%9A%E6%96%B0%E5%A2%9E%E5%8E%86%E5%8F%B2%E8%AE%B0%E5%BD%95)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 简述
 
 location 是最有用的 BOM 对象之一，提供了当前窗口中加载文档的信息，以及通常的导航功能。这个对象独特的地方在于，它既是 window 的属性，也是 document 的属性。也就是说，window.location 和 document.location 指向同一个对象。location 对象不仅保存着当前加载文档的信息，也保存着把 URL 解析为离散片段后能够通过属性访问的信息
