--- a/前端方向/前端基础/JavaScript高级程序设计笔记/G.第十六章-DOM2与DOM3/1.DOM演进.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/G.第十六章-DOM2与DOM3/1.DOM演进.md
@@ -1,8 +1,9 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
-- [简述](#%E7%AE%80%E8%BF%B0)
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [简述](#简述)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
