第十七章-事件

--- a/前端方向/前端基础/JavaScript高级程序设计笔记/H.第十七章-事件/1.事件流与事件处理程序.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/H.第十七章-事件/1.事件流与事件处理程序.md
@@ -1,3 +1,17 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [事件传播](#%E4%BA%8B%E4%BB%B6%E4%BC%A0%E6%92%AD)
+  - [事件流](#%E4%BA%8B%E4%BB%B6%E6%B5%81)
+- [事件处理](#%E4%BA%8B%E4%BB%B6%E5%A4%84%E7%90%86)
+  - [HTML 事件处理程序](#html-%E4%BA%8B%E4%BB%B6%E5%A4%84%E7%90%86%E7%A8%8B%E5%BA%8F)
+  - [DOM0 事件处理](#dom0-%E4%BA%8B%E4%BB%B6%E5%A4%84%E7%90%86)
+  - [DOM2 事件处理](#dom2-%E4%BA%8B%E4%BB%B6%E5%A4%84%E7%90%86)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 事件传播
 
 事件传播分两种，或者说两个阶段，是由于历史原因造成的：事件捕获、事件冒泡
@@ -9,6 +23,8 @@
 ### 事件流
 
 现在浏览器中事件传播分三个阶段：事件捕获 -> 到达目标 -> 事件冒泡，这个模型为事件拦截提供了可能
+
+**Tips:只有事件目标仍然存在于文档中时，事件才会冒泡。**
 
 _Tips：虽然 DOM2 Events 规范明确捕获阶段不命中事件目标，但现代浏览器都会在捕获阶段在事件目标上触发事件。最终结果是在事件目标上有两个机会来处理事件。_
 
