--- a/前端方向/前端基础/JavaScript高级程序设计笔记/H.第十七章-事件/2.事件对象.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/H.第十七章-事件/2.事件对象.md
@@ -1,3 +1,13 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [简述](#%E7%AE%80%E8%BF%B0)
+- [DOM 事件对象](#dom-%E4%BA%8B%E4%BB%B6%E5%AF%B9%E8%B1%A1)
+- [IE 事件对象](#ie-%E4%BA%8B%E4%BB%B6%E5%AF%B9%E8%B1%A1)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 简述
 
 在 DOM 中发生事件时，所有相关信息都会被收集并存储在一个名为 event 的对象中。这个对象包含了一些基本信息，比如导致事件的元素、发生的事件类型，以及可能与特定事件相关的任何其他数据。
