File、Blob、Worker

--- a/前端方向/前端基础/JavaScript高级程序设计笔记/Z1.第二十七章-WebWorker/1.WebWorker简介.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/Z1.第二十七章-WebWorker/1.WebWorker简介.md
@@ -1,3 +1,26 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [类型](#%E7%B1%BB%E5%9E%8B)
+- [限制](#%E9%99%90%E5%88%B6)
+- [Worker 对象属性与方法](#worker-%E5%AF%B9%E8%B1%A1%E5%B1%9E%E6%80%A7%E4%B8%8E%E6%96%B9%E6%B3%95)
+- [Worker 内可使用的 API](#worker-%E5%86%85%E5%8F%AF%E4%BD%BF%E7%94%A8%E7%9A%84-api)
+- [通讯](#%E9%80%9A%E8%AE%AF)
+  - [postMessage](#postmessage)
+  - [MessageChannel 创建双向通讯链路（可复用，可传递）](#messagechannel-%E5%88%9B%E5%BB%BA%E5%8F%8C%E5%90%91%E9%80%9A%E8%AE%AF%E9%93%BE%E8%B7%AF%E5%8F%AF%E5%A4%8D%E7%94%A8%E5%8F%AF%E4%BC%A0%E9%80%92)
+  - [BroadcastChannel 创建广播通讯（同源限制）](#broadcastchannel-%E5%88%9B%E5%BB%BA%E5%B9%BF%E6%92%AD%E9%80%9A%E8%AE%AF%E5%90%8C%E6%BA%90%E9%99%90%E5%88%B6)
+- [数据承载](#%E6%95%B0%E6%8D%AE%E6%89%BF%E8%BD%BD)
+- [生命周期](#%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F)
+  - [初始化](#%E5%88%9D%E5%A7%8B%E5%8C%96)
+  - [销毁](#%E9%94%80%E6%AF%81)
+- [使用本地代码创建工作者线程](#%E4%BD%BF%E7%94%A8%E6%9C%AC%E5%9C%B0%E4%BB%A3%E7%A0%81%E5%88%9B%E5%BB%BA%E5%B7%A5%E4%BD%9C%E8%80%85%E7%BA%BF%E7%A8%8B)
+  - [使用注意](#%E4%BD%BF%E7%94%A8%E6%B3%A8%E6%84%8F)
+- [动态载入](#%E5%8A%A8%E6%80%81%E8%BD%BD%E5%85%A5)
+- [关于错误](#%E5%85%B3%E4%BA%8E%E9%94%99%E8%AF%AF)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 类型
 
 - 专用工作者线程：专用工作者线程，通常简称为工作者线程、 Web Worker 或 Worker，是一种实用的工具，可以让脚本单独创建一个 JavaScript 线程，以执行委托的任务。专用工作者线程，顾名思义，只能被创建它的页面使用。
