--- a/前端方向/前端基础/JavaScript高级程序设计笔记/Z1.第二十七章-WebWorker/2.线程池.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/Z1.第二十七章-WebWorker/2.线程池.md
@@ -1,8 +1,9 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
-- [一个简单线程池的实现](#%E4%B8%80%E4%B8%AA%E7%AE%80%E5%8D%95%E7%BA%BF%E7%A8%8B%E6%B1%A0%E7%9A%84%E5%AE%9E%E7%8E%B0)
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [一个简单线程池的实现](#一个简单线程池的实现)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -93,7 +94,7 @@ self.onmessage = ({ data }) => {
   let view = new Float32Array(data.arrayBuffer);
   // 求和
   for (let i = data.startIdx; i < data.endIdx; ++i) {
-    // 不需要原子操作，因为只需要读
+    // 不需要原子操作，因为只需要读，如果是在原位置进行操作，则需要使用原子操作：Atomics，保证线程之间的数据同步
     sum += view[i];
   }
   // 把结果发送给工作者线程
