--- a/前端方向/前端基础/JavaScript高级程序设计笔记/K.第二十章-JavaScript API/2.File与Blob.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/K.第二十章-JavaScript API/2.File与Blob.md
@@ -1,6 +1,5 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
 - [File](#file)
   - [FileReader](#filereader)
@@ -53,3 +52,5 @@ document.appendChild(dom);
 dom.click();
 document.removeChild(dom);
 ```
+
+释放 URI 对象：window.URL.revokeObjectURL()
