第二十八章-最佳实践

--- a/前端方向/前端基础/JavaScript高级程序设计笔记/Q.第二十六章-模块/1.模块基础.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/Q.第二十六章-模块/1.模块基础.md
@@ -5,4 +5,102 @@
 些外部代码。不同的实现和特性让这些基本的概念变得有点复杂，但这个基本的思想是所有 JavaScript
 模块系统的基础。
 
+## 同步模块加载（CommonJS 规范）
 
+CommonJS 规范概述了同步声明依赖的模块定义。这个规范主要用于在服务器端实现模块化代码组
+织，但也可用于定义在浏览器中使用的模块依赖。 CommonJS 模块语法不能在浏览器中直接运行。
+
+```js
+// 定义模块依赖
+var moduleB = require('./moduleB');
+// 导出模块
+module.exports = {
+stuff: moduleB.doStuff();
+};
+```
+
+### 单例性/模块缓存
+
+无论一个模块在 require()中被引用多少次，模块永远是单例。在下面的例子中， moduleA 只会
+被打印一次。这是因为无论请求多少次， moduleA 只会被加载一次。
+
+模块第一次加载后会被缓存，后续加载会取得缓存的模块（如下代码所示）。模块加载顺序由依赖
+图决定。
+
+### 模块标识符
+
+所有 CommonJS 风格的实现共同之处是模块不会指定自己的标识符，它们的标识符由其在模块文件层级中的位置决定
+
+## 异步模块加载（AMD）
+
+异步模块定义（ AMD，Asynchronous Module Definition）的模块定义系统则以浏览器为目标执行环境，这需要考虑网络延迟的
+问题。 AMD 的一般策略是让模块声明自己的依赖，而运行在浏览器中的模块系统会按需获取依赖，并在依赖加载完成后立即执行依赖它们的模块
+
+AMD 模块可以使用字符串标识符指定自己的依赖，而 AMD 加载器会在所有依赖模块加载完毕后立即调用模块工厂函数。
+
+与 CommonJS 不同， AMD 支持可选地为模块指定字符串标识符。一个样例：
+
+```js
+// ID 为'moduleA'的模块定义。 moduleA 依赖 moduleB，
+// moduleB 会异步加载
+define("moduleA", ["moduleB"], function (moduleB) {
+  return {
+    stuff: moduleB.doStuff(),
+  };
+});
+```
+
+### 动态依赖
+
+```js
+define("moduleA", ["require"], function (require) {
+  if (condition) {
+    var moduleB = require("moduleB");
+  }
+});
+
+(function (root, factory) {
+  if (typeof define === "function" && define.amd) {
+    // AMD。注册为匿名模块
+    define(["moduleB"], factory);
+  } else if (typeof module === "object" && module.exports) {
+    // Node。不支持严格 CommonJS
+    // 但可以在 Node 这样支持 module.exports 的
+    // 类 CommonJS 环境下使用
+    module.exports = factory(require(" moduleB "));
+  } else {
+    // 浏览器全局上下文（ root 是 window）
+    root.returnExports = factory(root.moduleB);
+  }
+})(this, function (moduleB) {
+  // 以某种方式使用 moduleB
+  // 将返回值作为模块的导出
+  // 这个例子返回了一个对象
+  // 但是模块也可以返回函数作为导出值
+  return {};
+});
+```
+
+## 通用模块定义（UMD）
+
+UMD 定义的模块会在启动时检测要使用哪个模块系统，然后进行适当配置，并把所有逻辑包装在一个立即调用的函数表达式（IIFE）中。
+
+检测环境中的模块导入导出关键函数是否可用，决定采用哪一个模块系统，就这么简单
+
+## ES6 模块系统
+
+特点：
+
+- 原生不允许动态导入，无法做静态检查与分析，只能借助其他模块系统（AMD/SystemJS）完成动态加载
+- 模块标识符不能是动态表达式，只能是纯字符串（拼接也不行）
+
+### 关于 nomodule
+
+```html
+<!-- // 支持模块的浏览器会执行这段脚本
+// 不支持模块的浏览器不会执行这段脚本 -->
+<script type="module" src="module.js"></script>
+<!-- // 支持模块的浏览器不会执行这段脚本
+// 不支持模块的浏览器会执行这段脚本 -->
+<script nomodule src="script.js"></script>
+```
