--- a/小目标.md
+++ b/小目标.md
@@ -18,10 +18,11 @@
 - [x] nodejs
 - [x] npm 模块开发
 - [x] node-cli 指令开发学习
-- [ ] webpack5
-- [ ] Babel
-- [ ] Electron
-- [ ] 《JavaScript 高级程序设计》研读（2021 年内完成）
+- [x] 《JavaScript 高级程序设计》研读（2021/05/22 阅毕）
+- [ ] webpack5 特性学习
+- [ ] Babel各模块走看
+- [ ] Electron 整体学习
+- [ ] Electron 练习小项目
 
 ## 音乐
 
