--- a/前端方向/前端基础/JavaScript高级程序设计笔记/0.其他重点/2.拓展阅读（字节序）.md
+++ b/前端方向/前端基础/JavaScript高级程序设计笔记/0.其他重点/2.拓展阅读（字节序）.md
@@ -1,7 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 
-- [字节序](#%E5%AD%97%E8%8A%82%E5%BA%8F)
+- [字节序](#字节序)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -11,4 +11,4 @@
 
 网络字节序：始终使用大端字节序
 
-网络中设备林林总总，统一使用大端字节序，不管本地使用什么字节序，总结一下在操作系统中字节序：PowerPC（小端）、x86/x86_64（大端）
+网络中设备林林总总，统一使用大端字节序，不管本地使用什么字节序，总结一下在操作系统中字节序：PowerPC（大端）、x86/x86_64（小端）
