--- a/生活/吉他/乐理/3.和弦构成与推导.md
+++ b/生活/吉他/乐理/3.和弦构成与推导.md
@@ -1,6 +1,13 @@
 ## 什么是和弦
 
-和弦即三个音或以上的三度堆叠的组合。
+和弦即三个音或以上的三度堆叠的组合，最重要是要好听，多年的努力下，人们发现跨度为三个度的音叠加在一起最好听，所以，和谐构成音之间的音程也大都是三度关系
+
+1. 由三个或三个以上的音构成；
+2. 音之间有跨度关系（三度或非三度）；
+3. 音之间要从低到高排列；
+
+- 大三度：两个全音的跨度，即 4 个半音的跨度。
+- 小三度：一个全音加一个半音的跨度，即 3 个半音的跨度。
 
 ## 和弦种类
 
@@ -14,20 +21,29 @@
 
 这是一个翻译问题，按照规律的话，七和弦应该叫四和弦，因为有四个和弦构成音，但是之前原文中对七和弦的解释是七度和弦，想要表达的意思是：和弦根音与和弦构成音的最高音之间的音程是七度关系；但是翻译的人直接就把七直译过来了，后面的九和弦、十一和弦、十三和弦都是同理，也就是说，其实和弦命名只有三和弦的命名是真正正确的。
 
-## 怎么没有十五和弦（八个音）及以上数量的和弦呢？
+## 常用和弦标记与规则
+
+| 和弦类型               | 组成              | 标记           |
+| ---------------------- | ----------------- | -------------- |
+| 大三和弦               | 大三度 + 小三度   |                |
+| 小三和弦               | 小三度 + 大三度   | m              |
+| 增三和弦               | 大三度 + 大三度   | aug            |
+| 减三和弦               | 小三度 + 小三度   | dim            |
+| 大小七和弦（属七和弦） | 大三和弦 + 小三度 | 7 或 Mm7       |
+| 大大七和弦（大七和弦） | 大三和弦 + 大三度 | maj7 或 M7     |
+| 小小七和弦（小七和弦） | 小三和弦 + 小三度 | m7 或 mm7      |
+| 小大七和弦             | 小三和弦 + 大三度 | mM7            |
+| 减七和弦               | 减三和弦 + 小三度 | dim7           |
+| 半减七和弦             | 减三和弦 + 大三度 | m7-5           |
+| 增属七和弦             | 增三和弦 + 减三度 | 7#5 或 M7+5    |
+| 增大七和弦             | 增三和弦 + 小三度 | aug7 或 Maj7#5 |
+
+_Tips:属和弦没有三和弦。_
+
+### 怎么没有十五和弦（八个音）及以上数量的和弦呢？
 
 从根音往后数十五度就是和根音一样的音了（只是声部高了两个而已），就产生了没有必要的重复
 
-## 和弦家族
+## 和弦根音
 
-### 大（major）
-
-写法：大和弦一般就是在根音后面加上“maj”及相应的数量名，唯一的特例是大三和弦不需要加任何后缀。
-
-### 小（minor）
-
-写法：小和弦一般就是在根音后面加上“m”及相应的数量名，小三和弦不用加“3”。
-
-### 属（dominant）
-
-写法：属和弦一般就是在根音后面加上相应的数量名，属和弦没有三和弦。（例如属三和弦这种是不存在的）
+和弦组成音中的第一个音为和弦的根音，也叫基础音。他是整个和弦构成音中的最低音，可以根据当前的调式和某和弦的根音来判断该和弦的初始名称。
