和弦级数与进行

--- a/生活/吉他/乐理/3.和弦构成与推导.md
+++ b/生活/吉他/乐理/3.和弦构成与推导.md
@@ -25,13 +25,13 @@
 
 | 和弦类型               | 组成              | 标记           |
 | ---------------------- | ----------------- | -------------- |
-| 大三和弦               | 大三度 + 小三度   |                |
-| 小三和弦               | 小三度 + 大三度   | m              |
-| 增三和弦               | 大三度 + 大三度   | aug            |
-| 减三和弦               | 小三度 + 小三度   | dim            |
-| 大小七和弦（属七和弦） | 大三和弦 + 小三度 | 7 或 Mm7       |
+| 大三和弦               | 大三度 + 小三度   | C              |
+| 小三和弦               | 小三度 + 大三度   | Am             |
+| 增三和弦               | 大三度 + 大三度   | Caug           |
+| 减三和弦               | 小三度 + 小三度   | Cdim           |
 | 大大七和弦（大七和弦） | 大三和弦 + 大三度 | maj7 或 M7     |
 | 小小七和弦（小七和弦） | 小三和弦 + 小三度 | m7 或 mm7      |
+| 大小七和弦（属七和弦） | 大三和弦 + 小三度 | 7 或 Mm7       |
 | 小大七和弦             | 小三和弦 + 大三度 | mM7            |
 | 减七和弦               | 减三和弦 + 小三度 | dim7           |
 | 半减七和弦             | 减三和弦 + 大三度 | m7-5           |
