--- a/瞎看看/Electron/1.Electron[基础].md
+++ b/瞎看看/Electron/1.Electron[基础].md
@@ -1,17 +1,20 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
-- [Electron 基础](#electron-%E5%9F%BA%E7%A1%80)
-    - [调试工具 devtron](#%E8%B0%83%E8%AF%95%E5%B7%A5%E5%85%B7-devtron)
-    - [在 render 进程中使用 main 进程的 API](#%E5%9C%A8-render-%E8%BF%9B%E7%A8%8B%E4%B8%AD%E4%BD%BF%E7%94%A8-main-%E8%BF%9B%E7%A8%8B%E7%9A%84-api)
-- [Electron + React 开发环境搭建](#electron--react-%E5%BC%80%E5%8F%91%E7%8E%AF%E5%A2%83%E6%90%AD%E5%BB%BA)
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [Electron 基础](#electron-基础)
+    - [调试工具 devtron](#调试工具-devtron)
+    - [在 render 进程中使用 main 进程的 API](#在-render-进程中使用-main-进程的-api)
+- [Electron + React 开发环境搭建](#electron--react-开发环境搭建)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
 ## Electron 基础
 
 #### 调试工具 devtron
+
+**重点：devtron 已经停止维护，因此如果你需要使用这个东西，请将 Electron 的安装版本指定为 5.0.6**
 
 安装调试工具：yarn add devtron
 
@@ -86,11 +89,10 @@
 
         npx tsc main.ts
 
-
 至此，即可运行`yarn dev`进行项目运行了
 
-Tips1：为create-react-app添加环境变量BROWSER=none即可让React项目启动时不打开浏览器窗口
+Tips1：为 create-react-app 添加环境变量 BROWSER=none 即可让 React 项目启动时不打开浏览器窗口
 
-Tips2：wait-on用法：`wait-on <文件、网络资源地址> && <下一条要执行的指令>`
+Tips2：wait-on 用法：`wait-on <文件、网络资源地址> && <下一条要执行的指令>`
 
-Tips3：concurrently用法：`"concurrently \"指令1\" \"指令2\""`,注意，package.json中指令定义使用字符串定义，所以引号需要进行转义
+Tips3：concurrently 用法：`"concurrently \"指令1\" \"指令2\""`,注意，package.json 中指令定义使用字符串定义，所以引号需要进行转义
