--- a/瞎看看/Electron/1.Electron[基础].md
+++ b/瞎看看/Electron/1.Electron[基础].md
@@ -42,7 +42,7 @@
 
 2.  安装相关依赖、插件、工具
 
-        yarn add electron @types/electron cross-env wait-on electron-is-dev concurrently
+        yarn add electron @types/electron cross-env wait-on electron-is-dev concurrently ts-loader
 
     安装说明：
 
@@ -66,28 +66,85 @@
 
 4.  编写主入口文件基础逻辑 main.ts
 
-        const { app, BrowserWindow } = require("electron");
-        const isDev = require("electron-is-dev");
+```ts
+const { app, BrowserWindow, Menu } = require("electron");
+const isDev = require("electron-is-dev");
 
-        let mainWindow: Electron.BrowserWindow = null;
+let mainWindow: Electron.BrowserWindow = null;
 
-        app.on("ready", () => {
-        mainWindow = new BrowserWindow({
-            width: 800,
-            height: 600,
-            webPreferences: {
-            nodeIntegration: true
-            }
-        });
+app.on("ready", () => {
+  mainWindow = new BrowserWindow({
+    width: 800,
+    height: 600,
+    webPreferences: {
+      // 注入node
+      nodeIntegration: true,
+      // 关闭上下文隔离
+      contextIsolation: false,
+    },
+    icon: path.join(__dirname, "../public/favicon.ico"),
+    // 禁用窗口大小可调
+    resizable: isDev,
+  });
 
-        const urlLocation = isDev ? "http://localhost:3000" : "dummyurl";
+  // 隐藏menu
+  Menu.setApplicationMenu(null);
+  // 隐藏menu（Mac端）
+  if (!process.platform.includes("win")) {
+    app.dock.hide();
+  }
 
-        mainWindow.loadURL(urlLocation);
-        });
+  // 打开开发控制台
+  if (isDev) {
+    mainWindow.webContents.openDevTools();
+  }
 
-5.  执行编译，打成 js
+  const urlLocation = isDev ? "http://localhost:3000" : "dummyurl";
 
-        npx tsc main.ts
+  mainWindow.loadURL(urlLocation);
+});
+```
+
+5. 配置 webpack，编译 electron 入口文件 main.ts
+
+```js
+const path = require("path");
+
+module.exports = {
+  target: "electron-main",
+  entry: "./src/main.ts",
+  context: path.resolve(__dirname),
+  output: {
+    path: path.join(__dirname, "./build"),
+    filename: "main.js",
+  },
+  mode: "production",
+  node: {
+    __dirname: false,
+  },
+  module: {
+    rules: [
+      {
+        test: /\.ts$/,
+        use: [
+          {
+            loader: "ts-loader",
+            options: {
+              compilerOptions: {
+                // 额外的tsconfig选项，需要关闭，不能在tsconfig文件中直接修改，会被create-react-app重写回true
+                noEmit: false,
+              },
+            },
+          },
+        ],
+      },
+    ],
+  },
+  resolve: {
+    extensions: [".ts", ".js", ".json"],
+  },
+};
+```
 
 至此，即可运行`yarn dev`进行项目运行了
 
