--- a/小目标.md
+++ b/小目标.md
@@ -22,7 +22,7 @@
 - [ ] webpack5 特性学习
 - [ ] Babel各模块走看
 - [ ] Electron 整体学习
-- [ ] Electron 练习小项目
+- [x] Electron 练习小项目
 - [ ] Three.js 学习
 - [ ] 一个人工智能的诞生学习
 - [ ] WebAssembly学习
